# J1939-Protocol

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  j1939.h
config/: CMakeLists.txt  j1939_application.c  j1939_config.h  j1939_hcan1.c  j1939_hcan2.c  j1939_port.inc  j1939_register.inc
demo/: CMakeLists.txt  j1939_demo1.c  j1939_demo1.cpp  j1939_demo2.c  j1939_demo_cpp.cpp  j1939_demo_protocol.c  j1939_demo_stability.c  main.cpp  test_message.cpp  test_protocol.cpp  test_queue.cpp
src/: CMakeLists.txt  j1939.c  j1939.h  j1939_port.c  j1939_port.h  j1939_types.h  j1939_virtual.cpp  j1939_virtual.h
src/common/: j1939_queue.c  j1939_queue.h  j1939_typedef.h
src/memory/: j1939_memory.c  j1939_memory.h
src/message/: j1939_message.c  j1939_message.h
src/port/: j1939_memory.c  j1939_memory.h  j1939_port.c  j1939_port.h  j1939_portdef.h  j1939_virtual.c  j1939_virtual.h
src/protocol/: j1939_protocol.c  j1939_protocol.h
src/virtual/: j1939_virtual.c  j1939_virtual.h
test/: CMakeLists.txt  main.cpp
